<resources>
    <string name="app_name">CAV</string>
    <string name="text_failure">FALHA INESPERADA NO APLICATIVO! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_initial_menu">MENU INICIAL - V %1$s</string>
    <string name="text_item_note">APONTAMENTO</string>
    <string name="text_item_config">CONFIGURAÇÃO</string>
    <string name="text_item_out">SAIR</string>
    <string name="text_status_started">Aparelho sem número</string>
    <string name="text_status_send">Existe dados para serem enviado</string>
    <string name="text_status_sending">Dados estão sendo enviados</string>
    <string name="text_status_sent">Não existe dados para serens enviados</string>
    <string name="text_blocked_access_app">ACESSO NEGADO! POR FAVOR, CONFIGURE O APLICATIVO ANTES DO USO DO MESMO!</string>
    <string name="text_password">SENHA</string>
    <string name="text_pattern_ok">OK</string>
    <string name="text_pattern_cancel">CANCELAR</string>
    <string name="text_pattern_return">RETORNAR</string>
    <string name="text_pattern_next">AVANÇAR</string>
    <string name="text_password_invalid">SENHA INVÁLIDA!</string>
    <string name="text_title_number">NRO APARELHO</string>
    <string name="text_pattern_save">SALVAR</string>
    <string name="text_pattern_edit">EDITAR</string>
    <string name="text_pattern_insert">INSERIR</string>
    <string name="text_pattern_delete">EXCLUIR</string>
    <string name="text_msg_recovery">RECUPERANDO DADOS DA TABELA \"%1$s\" DO WEB SERVICE.</string>
    <string name="text_msg_clean">LIMPANDO A TABELA \"%1$s\".</string>
    <string name="text_msg_save">SALVANDO DADOS NA TABELA \"%1$s\".</string>
...
    <string name="text_item_car">VIATURA</string>
    <string name="text_card">FICHA</string>
    <string name="text_desc_local">O LOCAL DO ACIDENTE SERIA ESSE ABAIXO?\n\n ENDEREÇO: %1$s\n\nLATITUDE: %2$s\nLONGITUDE: %3$s</string>
    <string name="text_local_selection">Localização Selecionada</string>
    <string name="text_input_address">Digite o endereço</string>
    <string name="text_field">Pesquisar</string>
    <string name="text_capture_local">CAPTURAR LOCALIZAÇÃO</string>
    <string name="text_local_now">LOCALIZAÇÃO ATUAL</string>
    <string name="text_type_local">DIGITAR LOCAL</string>
    <string name="text_nature">NATUREZA DE ATENDIMENTO</string>
    <string name="text_attendant">ATENDENTE</string>
    <string name="text_local">LOCAL</string>
    <string name="text_type_accident">TIPO DE ACIDENTE</string>
    <string name="text_data_local">DADOS DO LOCAL</string>
...
    <string name="text_non_existent_local">POR FAVOR, ADICIONE O LOCAL DO ACIDENTE PARA QUE POSSA FINALIZAR O APONTAMENTO.</string>
    <string name="text_non_existent_data_local">POR FAVOR, ADICIONE DADO(S) DO LOCAL DO ACIDENTE PARA QUE POSSA FINALIZAR O APONTAMENTO.</string>
    <string name="text_non_existent_nature">POR FAVOR, ADICIONE A NATUREZA DO ATENDIMENTO DO ACIDENTE PARA QUE POSSA FINALIZAR O APONTAMENTO.</string>
    <string name="text_non_existent_type_accident">POR FAVOR, ADICIONE O TIPO DO ACIDENTE PARA QUE POSSA FINALIZAR O APONTAMENTO.</string>
    <string name="text_non_existent_vehicle_own">POR FAVOR, ADICIONE O VEÍCULO PRÓPRIO ENVOLVIDO NO ACIDENTE PARA QUE POSSA FINALIZAR O APONTAMENTO.</string>
    <string name="text_breathalyzer">BAFÔMETRO</string>
    <string name="text_pattern_yes">SIM</string>
    <string name="text_pattern_no">NÃO</string>
    <string name="text_pattern_negative">NEGATIVO</string>
    <string name="text_pattern_positive">POSITIVO</string>
    <string name="text_realized_yes">REALIZADO</string>
    <string name="text_realized_no">NÃO REALIZADO</string>
</resources>
