...
        {
            "id": 25,
            "description": "OBSTÁCULO"
        },
        {
            "id": 26,
            "description": "BARREIRA"
        },
        {
            "id": 27,
            "description": "DEFENSA"
        },
        {
...
"""

const val supportTeamsList = """
    [
        {
            "id": 1,
            "description": "GUINCHOS"
        },
        {
            "id": 2,
            "description": "SOS - AMBULÂNCIA"
        },
        {
            "id": 3,
            "description": "SOS - RESGATE"
        },
        {
            "id": 4,
            "description": "BOMBEIROS"
        },
        {
            "id": 5,
            "description": "APOIO AMBIENTAL"
        },
        {
...
