...
import br.com.usinasantafe.cav.presenter.theme.TitleDesign
import br.com.usinasantafe.cav.presenter.theme.CAVTheme
import br.com.usinasantafe.cav.presenter.theme.MsgErrors
import br.com.usinasantafe.cav.presenter.theme.TextButtonDesign
import br.com.usinasantafe.cav.utils.UiStatusState

const val TAG_LOCAL_EDIT_BUTTON = "tag_local_edit_button"
const val TAG_DATA_LOCAL_EDIT_BUTTON = "tag_data_local_edit_button"
const val TAG_SUPPORT_TEAMS_EDIT_BUTTON = "tag_support_teams_edit_button"

@Composable
fun LocalSupportScreen(
    viewModel: LocalSupportViewModel = hiltViewModel(),
    onNavDataInitial: () -> Unit,
    onNavLocal: () -> Unit,
...
